--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -132,20 +132,16 @@
         <item>-1</item>
     </string-array>
 
-    <string name="about_app_presentation">Oi, eu sou o João Paulo, estudante de Engenharia de Computação na UEFS\nEste é o UNES - UNES Não É Sagres, um aplicativo para ajudar você na sua vida acadêmica :)\nO código fonte do aplicativo está disponível em: github.com/ForceTower/UEFS_Sagres_App</string>
-    <string name="about_app_disclaimer">Este aplicativo não foi endorsado ou licenciado pela TecnoTrends e não tem nenhuma ligação com a empresa que fornece o serviço do Sagres à universidade. O aplicativo foi desenvolvido para auxiliar o dia a dia dos estudantes da UEFS.\nEle ainda não está perfeito, alguns bugs inesperados podem acontecer, por isso não confie sua vida a ele ainda.\nO aplicativo é um reflexo do SAGRES, então em caso de algo inesperado no sagres, o aplicativo pode não funcionar corretamente.</string>
-    <string name="about_app_privacy">As informações adquiridas pelo aplicativo não são transmitidas para mais ninguém alem de você. O usuário e senha digitados aqui ficam salvos APENAS no SMARTPHONE (Ou na SUA conta do Google, caso o seu celular suporte backup).</string>
-    <string name="about_app_features">Após o primeiro login, você terá acesso ao seu horário, notas e recados. Estes dados ficam salvos no seu smartphone, então caso você esteja sem internet você ainda poderá visualizar os dados, e quando você voltar à internet os dados serão atualizados. O aplicativo também atualiza as informações de forma automática de certo em certo tempo se houver conexão com a internet :)</string>
+    <string name="about_app_presentation">Oi, meu nome é João Paulo e sou estudante de Engenharia de Computação na UEFS.\nEste é o UNES - UNES Não É Sagres, um aplicativo para ajudar você na sua vida acadêmica :)\n\nEu criei este aplicativo após notar nossa necessidade como estudantes de algo que nos avisasse quando um professor postasse uma mensagem ou uma nota no Sagres.\n\nComo o propósito é que o aplicativo seja aberto, o código fonte está disponível em: https://github.com/ForceTower/UEFS_Sagres_App</string>
+    <string name="about_app_disclaimer">Este aplicativo não foi endorsado ou licenciado pela TecnoTrends e não tem nenhuma ligação com a empresa que fornece o serviço do Sagres à universidade.\n\nO aplicativo foi desenvolvido para auxiliar o dia a dia dos estudantes da UEFS.\n\nEle ainda não está perfeito, alguns bugs inesperados podem acontecer, por isso não confie sua vida a ele ainda.\n\nO aplicativo é um reflexo do SAGRES, então em caso de algo inesperado no Sagres, o aplicativo pode não funcionar corretamente.</string>
+    <string name="about_app_privacy">As informações adquiridas pelo aplicativo não são transmitidas para mais ninguém além de você. O usuário e senha digitados aqui ficam salvos APENAS no seu SMARTPHONE</string>
+    <string name="about_app_features">Após o login, você terá acesso ao seu horário, notas, recados e outras coisas.\n\nEstes dados ficam salvos no seu smartphone, então caso você esteja sem internet você ainda poderá visualizar os dados, e quando você voltar à internet os dados serão atualizados.\n\nO aplicativo também atualiza as informações de forma automática de certo em certo tempo se houver conexão com a internet :)</string>
     <string name="about_app_notifications">Você receberá uma notificação quando algum professor postar uma nota ou colocar um recado no portal.</string>
-    <string name="about_app_exit">A qualquer momento, você pode se desconectar da sua conta clicando em Configurações>Sair isso fará com que todos os relacionado à sua conta do Sagres no aplicativo sejam apagados, você voltará a receber notificações quando entrar novamente.</string>
+    <string name="about_app_exit">A qualquer momento, você pode se desconectar da sua conta clicando em Configurações>Sair, isso fará com que todos os dados relacionados à sua conta do Sagres no aplicativo sejam apagados, você voltará a receber notificações quando entrar novamente.</string>
     <string name="about_app_bugs">Depois de reescrever grande parte do código do aplicativo, acho que limpei todos os erros. Mas provavelmente deve ter alguns bugs escondidos por ai.\n\nSe encontrar algum me avise :v</string>
     <string name="about_app_enjoy">Aproveite :)</string>
     <string name="about_app_features_title">Funções e Benefícios</string>
     <string name="credits">Créditos</string>
-    <string name="credits_string">
-        Ícone do Aplicativo: Lokisley Oliveira\nhttps://www.facebook.com/Lokisley
-        Nome do Aplicativo: Lokisley + Matheus Teixeixa\nhttps://www.facebook.com/teixeirista\nOlhem também a página dele (os textos são bons)\nhttps://www.facebook.com/FigurativamenteLiteral/\n\n
-    </string>
     <string name="about_app_notifications_title">Notificações</string>
     <string name="about_app_exit_title">Sair</string>
     <string name="about_app_presentation_title">Sobre mim</string>
