--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -256,5 +256,6 @@
     <string name="ru_feedback_desc">O que você acha do BandejãoUEFS</string>
     <string name="ru_contribute_desc">Melhore a exatidão do sistema</string>
     <string name="ru_last_update">Última atualização: %1$s</string>
-    <string name="ru_loading">Carregando</string>
+    <string name="ru_loading">Carregando...</string>
+    <string name="ru_owners">Esta funcionalidade vem do bit.ly/bandejaouefs</string>
 </resources>
