--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -257,4 +257,5 @@
     <string name="ru_owners">This feature comes from bit.ly/bandejaouefs</string>
 
     <string name="ru_amount_format">%1$d</string>
+    <string name="remote">Remote</string>
 </resources>
