--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -285,4 +285,24 @@
     <string name="profile_image_unset">You can go back to the default image by tapping and holding the image</string>
     <string name="new_schedule_takes_an_update">If you can\'t see the schedule correctly, wait for a sync or do one yourself.</string>
     <string name="image_could_not_be_loaded">Image could not be loaded. Is it too big?</string>
+
+    <string name="pref_palette">Colors</string>
+    <string name="pref_palette_desc">Change the app theme (Experimental)</string>
+    <string name="reset_the_app_to_apply">Restart the app to apply changes</string>
+
+    <string-array name="pref_palette_theme_names">
+        <item>Blue - Orange (Default)</item>
+        <item>Rosa - Gray (Ellen)</item>
+        <item>Gray - Gray (Me)</item>
+        <item>Purple - Yellow (Random)</item>
+        <item>Gray - Green (Random)</item>
+    </string-array>
+
+    <string-array name="pref_palette_theme_values">
+        <item>default_theme</item>
+        <item>ellen_theme</item>
+        <item>gray_1_theme</item>
+        <item>random_1_theme</item>
+        <item>random_2_theme</item>
+    </string-array>
 </resources>
