--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -309,4 +309,10 @@
     </string-array>
 
     <string name="no_score_message">Eu não sei seu score, não entendi</string>
+    <string name="play_sign_in_other_error">Houve um problema durante o Login, tente mais tarde</string>
+    <string name="pref_unes_the_adventure">UNES - A aventura</string>
+    <string name="pref_unes_the_adventure_desc">Desbloqueie as conquistas da UEFS</string>
+    <string name="pref_unes_the_adventure_logout">Desconectar do Play Games</string>
+    <string name="pref_unes_the_adventure_achievements">Conquistas</string>
+    <string name="play_games_disconnected">Desconectado da Aventura</string>
 </resources>
