--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -84,6 +84,7 @@
     <string name="pref_sync_only_wifi_enabled">App will sync only if on wifi</string>
 
     <string-array name="pref_sync_frequency_titles">
+        <item>15 minutes</item>
         <item>30 minutes</item>
         <item>1 hour</item>
         <item>2 hours</item>
@@ -92,6 +93,7 @@
         <item>Never</item>
     </string-array>
     <string-array name="pref_sync_frequency_values">
+        <item>15</item>
         <item>30</item>
         <item>60</item>
         <item>120</item>
