--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,6 +116,7 @@
     <string name="about_app_title">Sobre o aplicativo</string>
 
     <string-array name="pref_sync_frequency_titles">
+        <item>15 minutos</item>
         <item>30 minutos</item>
         <item>1 hora</item>
         <item>2 horas</item>
@@ -125,6 +126,7 @@
     </string-array>
 
     <string-array name="pref_sync_frequency_values">
+        <item>15</item>
         <item>30</item>
         <item>60</item>
         <item>120</item>
