Bug fix on grade loading ignoring error result

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -334,4 +334,5 @@
     <string name="auth_activity">Autenticação</string>
     <string name="about_app">Sobre o aplicativo</string>
     <string name="control_room">Sala de Controle</string>
+    <string name="unes_the_adventure">A Aventura</string>
 </resources>
