--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -340,4 +340,7 @@
     <string name="unes_the_adventure_logout">Sair da aventura</string>
     <string name="connect_to_the_internet">Conecte-se à internet e tente novamente</string>
     <string name="access_fine_location_request">O aplicativo precisa acessar sua localização para usar este recurso</string>
+    <string name="cant_receive_location">Erro ao receber localização</string>
+    <string name="location_is_not_accurate">A localização não é precisa o suficiente</string>
+    <string name="adventure_not_in_a_valid_location">Você não está num lugar válido</string>
 </resources>
