--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -343,5 +343,6 @@
     <string name="cant_receive_location">Erro ao receber localização</string>
     <string name="location_is_not_accurate">A localização não é precisa o suficiente</string>
     <string name="adventure_not_in_a_valid_location">Você não está num lugar válido</string>
-    <string name="adventure_confirm_location">Clique no circulo para verificar localização</string>
+    <string name="adventure_confirm_location">Clique no círculo para verificar localização</string>
+    <string name="downloading_your_grades">Baixando notas dos semestres anteriores</string>
 </resources>
